--- a/ARMv8/lede-gcc11.config
+++ b/ARMv8/lede-gcc11.config
@@ -7877,9 +7877,9 @@ CONFIG_PACKAGE_coreutils-base64=y
 # CONFIG_PACKAGE_coreutils-date is not set
 # CONFIG_PACKAGE_coreutils-dd is not set
 # CONFIG_PACKAGE_coreutils-df is not set
-# CONFIG_PACKAGE_coreutils-dir is not set
-# CONFIG_PACKAGE_coreutils-dircolors is not set
-# CONFIG_PACKAGE_coreutils-dirname is not set
+CONFIG_PACKAGE_coreutils-dir=y
+CONFIG_PACKAGE_coreutils-dircolors=y
+CONFIG_PACKAGE_coreutils-dirname=y
 # CONFIG_PACKAGE_coreutils-du is not set
 # CONFIG_PACKAGE_coreutils-echo is not set
 # CONFIG_PACKAGE_coreutils-env is not set
