--- a/.github/workflows/releases-big-openwrt.yml
+++ b/.github/workflows/releases-big-openwrt.yml
@@ -68,7 +68,7 @@ jobs:
 
     - name: Package Armvirt as OpenWrt
       if: (!cancelled())
-      uses: ophub/kernel_dev@main
+      uses: ophub/kernel/releases/tag/kernel_dev@main
       env:
         OPENWRT_ARMVIRT: https://github.com/JohnnyDu0815/OpenWrt/releases/download/openwrt_armvirt/openwrt-armvirt-64-generic-rootfs.tar.gz
         PACKAGE_SOC: all
